--- a/src/main.css
+++ b/src/main.css
@@ -40,7 +40,6 @@ body {
     top: 10px;
     left: 10px;
     width: 400px;
-    height: 400px;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -61,14 +60,32 @@ body {
 
 .element-configuration-container {
     width: 100%;
-    height: 200px;
+    height: 400px;
     background-color: white;
-    border: 1px solid black;
     padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .element-preview {
     width: 100%;
     height: 100%;
     background-color: grey;
+}
+
+.element-switcher-container {
+    width: 100%;
+    position: relative;
+    height: 50px;
+}
+
+.previous-element-button {
+    position: absolute !important;
+    left: 0px;
+}
+
+.next-element-button {
+    position: absolute !important;
+    right: 0px;
 }
